Fixes [Design] layout action-columns in datagrid are too wide
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@2099 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/core/layout/css/imports/datagrid.css
+++ b/default_www/backend/core/layout/css/imports/datagrid.css
@@ -76,7 +76,8 @@
 	Default widths for certain cells
 */
 
-th.action {
+th.action,
+th.edit {
 	width: 10%;
 }
 
